--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "5"
 before_install:
-  - "npm install jasmine-node"
+  - "npm install jasmine-node && npm upgrade jasmine-node"
 script:
   - "jasmine-node spec --verbose"
